# Psi

./: .gitignore  AUTHENTICATION_SECURITY_REVIEW.md  ERROR_CODES_DOCUMENTATION.md  ERROR_CODE_IMPLEMENTATION_SUMMARY.md  ERROR_HANDLING_IMPLEMENTATION.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_SUMMARY.md  LICENSE  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_REVIEW.md  Psi_PRD_LLD_PLAN  RATE_LIMITER_REVIEW.md  README.md  SECURITY_FIXES_APPLIED.md  TEST_GENERATION_SUMMARY.md
.claude/: settings.local.json
backend/: .env.example  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/api/v1/: auth.py  food.py  food_enhanced.py  fridge.py  fridge_enhanced.py  wellness.py  wellness_enhanced.py
backend/app/core/: config.py  database.py  error_codes.py  error_handlers.py  exceptions.py  security.py
backend/app/models/: emotion.py  food.py  recipe.py  user.py
backend/app/services/: database_service.py  emotion_analysis.py  image_recognition.py  nutrition_analysis.py  recipe_matching.py
backend/migrations/: 003_create_daily_usage_table.sql
backend/scripts/: init_mongodb.js  init_postgres.sql  train_yolo.py
backend/tests/: README.md  conftest.py  test_error_codes.py  test_food_analysis.py  test_food_api_comprehensive.py  test_fridge_api_comprehensive.py  test_fridge_detection.py  test_wellness_analysis.py  test_wellness_api_comprehensive.py
backend/tests/integration/: __init__.py  test_full_system.py
docs/: API.md  API_DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  SETUP.md  (+2 more)
(+17 files in other folders)
